# noteprinter

backend/: .gitignore  deploy.sh  manage.py  package.json  pyproject.toml
backend/deployment/: noteprinter-worker.service  noteprinter.service
backend/noteprinter/: asgi.py  secrets.example.py  settings.py  urls.py  wsgi.py
backend/notes/: admin.py  consumers.py  forms.py  middleware.py  models.py  render_image.py  routing.py  urls.py  utils.py  views.py
backend/notes/management/commands/: bla.py  noterender.py
backend/notes/migrations/: 0001_initial.py  0002_apitoken.py
backend/notes/templates/latex/: template.tex
backend/notes/templates/notes/: index.html  main.html  room.html  viewedits.html
client/: .gitignore  capabilities_own.json  client.py  power_switch.py  printer.py  printer_test.py  pyproject.toml
